Harja dev ympäristö kontissa.